--- a/01/01.md
+++ b/01/01.md
@@ -1,85 +1,40 @@
 # Домашнее задание к занятию "..."
-`Укажи тему занятия в соответствии с программой курса. За точной формулировкой можно обратиться к методисту курса.`
 
 ### Цель задания
 
-В результате выполнения этого задания вы ... 
-
-`В этом блоке опиши зачем и почему студенту следует выполнить эту домашнюю работу, какую пользу он извлечет, чему научится. Выполнение задания потенциально должно быть интересно студенту.`
-
-1. ...
-2. ...
-
-`Опиши основные учебные цели домашней работы, которые студент сможет реализовать в ходе выполнения задания. Цели лучше работают, когда они прописаны на доступном для студента языке. Цели должны раскрывать основные практические навыки, которые освоит студент при выполнении задания.`
-
-`Примечание: Если разработка программы ведется по МаКо, рекомендуется цели синхронизовать с данными матрицы компетенций, которые можно запросить у методиста курса.`
+В результате выполнения этого задания вы получите практику в тестировании API.
 
 ------
 
 ### Чеклист готовности к домашнему заданию
 
-1. ...
-2. ...
+1. Установить postman или зарегистрироваться через web-интерфейс. По желанию можно использовать curl или любой язык программирования.
 
-`Если для выполнения домашнего задания студенту требуется предварительная подготовка необходимых материалов, настройки ПО и т. п., рекомендуется вынести эти этапы в отдельный чеклист. Распиши по пунктам основные предварительные задачи для студента, дай ссылки на необходимые материалы в случае необходимости.`
-
-`Примечание: Данный блок является не обязательным. Если нет в нем необходимости, его можно удалить.`
-
-------
-
-### Инструкция к заданию
-
-1. ...
-2. ...
-
-`Приведи четкую и понятную инструкцию по выполнению работы. Инструкция содержит основные этапы выполнения работы в общих чертах. Здесь следует раскрыть формат и порядок выполнения и сдачи работы эксперту на проверку. Укажи как можно обратиться к эксперту в случае возникновения вопросов по домашнему заданию.`
 
 ------
 
 ### Инструменты/ дополнительные материалы, которые пригодятся для выполнения задания
 
-1. ...
-2. ...
+1. [Стратегия тестирования REST API](https://habr.com/ru/articles/568360/)
+2. [Руководство по тестированию автоматизации REST API](https://www.loadview-testing.com/ru/blog/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8E-%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%B0%D1%82/)
+3. [Большой гайд по тестированию с Postman для начинающих](https://testengineer.ru/gajd-po-testirovaniyu-v-postman/)
+4. [Основы Postman для самых маленьких](https://habr.com/ru/companies/maxilect/articles/596789/)
 
-`Опиши тезисно инструменты и дополнительные материалы, которые потенциально могут понадобиться студенту в ходе выполнения домашнего задания, дай на них ссылки при необходимости.`
 
-------
-`Ниже подробно опиши сами задания для студента. Задания содержат текст условий задач, необходимые ссылки, рекомендации, рисунки и другие необходимые материалы. Также здесь можно дополнительно описать формат выполнения заданий, привести шаблон задания. На шаблон можно дать ссылку.`
-
-`Примечание: Шаблон не является обязательным элементом для инструкции. Ниже приведен пример шаблона. При работе с шаблоном рекомендуется документ скопировать на диск или дать ссылку на собственный разработанный шаблон.`
 
 ### Задание 1
 
-1. ...
-2. ...
+1. Перейдите на ресурс https://jsonplaceholder.typicode.com/
+2. Изучите предлагаемый API https://jsonplaceholder.typicode.com/guide/
+3. Выполните тестирование методов
+"Getting a resource"
+"Deleting a resource"
 
-------
-
-### Задание 2
-
-1. ...
-2. ...
-
-
-------
+для двух ресурсов:
+/comments
+/albums
 
 ### Правила приема работы
 
-1. ...
-2. ...
-
-`Опиши кратко технические требований для сдачи работы: объём, форма/формат.` 
-
-`Например:`
-- `отправлена ссылка на документ (Google Doc) с выполненным заданием в личном кабинете;`
-- `документ размещен на личном Google Disk;`
-- `к документу настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.`
-
-------
-
-### Критерии оценки
-
-1. ...
-2. ...
-
-`Подробно пропиши критерии оценивания. В критериях отрази условия, при которых студент получит или не получит зачёт. Критерии должны содержать чёткие и однозначные формулировки, понятные студенту и тренеру курса.`
+1. Создано минимум два тест-кейса для каждого метода
+2. Предоставлены снимки экрана, подтверждающие выполнение тестов
