--- a/01/01.md
+++ b/01/01.md
@@ -1,19 +1,20 @@
-# Домашнее задание к занятию "..."
+# Домашнее задание к занятию «Введение в тестирование»
 
 ### Цель задания
 
-В результате выполнения этого задания вы получите практику в тестировании API.
+В результате выполнения этого задания вы приобретёте практику в тестировании API.
 
 ------
 
 ### Чеклист готовности к домашнему заданию
 
-1. Установить postman или зарегистрироваться через web-интерфейс. По желанию можно использовать curl или любой язык программирования.
+1. Установить Postman или зарегистрироваться через web-интерфейс.   
+По желанию можно использовать curl или любой язык программирования.
 
 
 ------
 
-### Инструменты/ дополнительные материалы, которые пригодятся для выполнения задания
+### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания
 
 1. [Стратегия тестирования REST API](https://habr.com/ru/articles/568360/)
 2. [Руководство по тестированию автоматизации REST API](https://www.loadview-testing.com/ru/blog/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8E-%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%B0%D1%82/)
@@ -22,23 +23,27 @@
 
 
 
-### Задание 1
+### Задание
 
-1. Перейдите на ресурс https://jsonplaceholder.typicode.com/
-2. Изучите предлагаемый API https://jsonplaceholder.typicode.com/guide/
-3. Выполните тестирование методов
+1. Перейдите [по ссылке](https://jsonplaceholder.typicode.com/).
+2. Изучите [предлагаемый API](https://jsonplaceholder.typicode.com/guide/).
+3. Выполните тестирование методов:
+- Getting a resource   
+- Deleting a resource
 
-"Getting a resource"
+для двух ресурсов:   
+/comments   
+/albums   
 
-"Deleting a resource"
-
-для двух ресурсов:
-
-/comments
-
-/albums
+*В качестве решения приложите снимки экрана, подвтерждающие выполнение тестов*
 
 ### Правила приема работы
 
-1. Создано минимум два тест-кейса для каждого метода
-2. Предоставлены снимки экрана, подтверждающие выполнение тестов
+В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием.  
+В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
+
+### Критерии оценки
+
+Для получения зачёта:
+1. Создано минимум два тест кейса для каждого метода.
+2. Предоставлены снимки экрана, подтверждающие выполнение тестов.
