--- a/02/02.md
+++ b/02/02.md
@@ -1,5 +1,4 @@
-# Домашнее задание к занятию "..."
-`Укажи тему занятия в соответствии с программой курса. За точной формулировкой можно обратиться к методисту курса.`
+# Домашнее задание к занятию "Тестирование данных. Требования и подход"
 
 ### Цель задания
 
