--- a/02/02.md
+++ b/02/02.md
@@ -2,34 +2,14 @@
 
 ### Цель задания
 
-В результате выполнения этого задания вы ... 
-
-`В этом блоке опиши зачем и почему студенту следует выполнить эту домашнюю работу, какую пользу он извлечет, чему научится. Выполнение задания потенциально должно быть интересно студенту.`
-
-1. ...
-2. ...
-
-`Опиши основные учебные цели домашней работы, которые студент сможет реализовать в ходе выполнения задания. Цели лучше работают, когда они прописаны на доступном для студента языке. Цели должны раскрывать основные практические навыки, которые освоит студент при выполнении задания.`
-
-`Примечание: Если разработка программы ведется по МаКо, рекомендуется цели синхронизовать с данными матрицы компетенций, которые можно запросить у методиста курса.`
-
-------
-
-### Чеклист готовности к домашнему заданию
-
-1. ...
-2. ...
-
-`Если для выполнения домашнего задания студенту требуется предварительная подготовка необходимых материалов, настройки ПО и т. п., рекомендуется вынести эти этапы в отдельный чеклист. Распиши по пунктам основные предварительные задачи для студента, дай ссылки на необходимые материалы в случае необходимости.`
-
-`Примечание: Данный блок является не обязательным. Если нет в нем необходимости, его можно удалить.`
+В результате выполнения этого задания вы научитесь использовать утилиты нагрузочного тестирования и напишите свои unit-тесты
 
 ------
 
 ### Инструкция к заданию
 
-1. ...
-2. ...
+1. Установите PosgreSQL.
+2. Установите pgbouncer.
 
 `Приведи четкую и понятную инструкцию по выполнению работы. Инструкция содержит основные этапы выполнения работы в общих чертах. Здесь следует раскрыть формат и порядок выполнения и сдачи работы эксперту на проверку. Укажи как можно обратиться к эксперту в случае возникновения вопросов по домашнему заданию.`
 
