--- a/02/02.md
+++ b/02/02.md
@@ -10,55 +10,41 @@
 
 1. Установите PosgreSQL.
 2. Установите pgbouncer.
-
-`Приведи четкую и понятную инструкцию по выполнению работы. Инструкция содержит основные этапы выполнения работы в общих чертах. Здесь следует раскрыть формат и порядок выполнения и сдачи работы эксперту на проверку. Укажи как можно обратиться к эксперту в случае возникновения вопросов по домашнему заданию.`
-
 ------
 
 ### Инструменты/ дополнительные материалы, которые пригодятся для выполнения задания
 
-1. ...
-2. ...
+1. [Как настроить pgbouncer](https://auganrymkhan.com/tutorial/kak-nastroit-pgbouncer)
+2. [Настраиваем пул соединений к PostgreSQL с PgBouncer](https://eax.me/pgbouncer/)
+3. [PostgreSQL Connection Pooling with PgBoun](https://pgdash.io/blog/pgbouncer-connection-pool.html)
+4. [Настройка удаленного подключения к PostgreSQL](https://1cloud.ru/help/windows/ws2019_psql_remote_coonect)
 
-`Опиши тезисно инструменты и дополнительные материалы, которые потенциально могут понадобиться студенту в ходе выполнения домашнего задания, дай на них ссылки при необходимости.`
-
-------
-`Ниже подробно опиши сами задания для студента. Задания содержат текст условий задач, необходимые ссылки, рекомендации, рисунки и другие необходимые материалы. Также здесь можно дополнительно описать формат выполнения заданий, привести шаблон задания. На шаблон можно дать ссылку.`
-
-`Примечание: Шаблон не является обязательным элементом для инструкции. Ниже приведен пример шаблона. При работе с шаблоном рекомендуется документ скопировать на диск или дать ссылку на собственный разработанный шаблон.`
 
 ### Задание 1
 
-1. ...
-2. ...
+1. Проведите нагрузочное тестирование БД в установленным pgbouncer и без него.
+2. Сравните результаты.
+
+*В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
 
 ------
 
 ### Задание 2
 
-1. ...
-2. ...
+1. Напишите хранимую процедуру, реализуюущую расчет средней цены товара. 
+2. Формула расчета: ((<количество_товара_по_акции> \* <цена_товара_по_акции>) + (<количество_товара_без_акции> \* <цена_товара_без_акции>)) \\ (<количество_товара_по_акции> + <количество_товара_без_акции>)
+3. Напишите минимум четыре unit-теста для данной процедуры 
 
-
+*В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
 ------
 
-### Правила приема работы
+### Правила приёма работы
 
-1. ...
-2. ...
-
-`Опиши кратко технические требований для сдачи работы: объём, форма/формат.` 
-
-`Например:`
-- `отправлена ссылка на документ (Google Doc) с выполненным заданием в личном кабинете;`
-- `документ размещен на личном Google Disk;`
-- `к документу настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.`
-
-------
+В личном кабинете отправлена ссылка на Google Документ с выполненным заданием.  
+В документе настроены права доступа «Просматривать могут все в интернете, у кого есть ссылка».
 
 ### Критерии оценки
 
-1. ...
-2. ...
-
-`Подробно пропиши критерии оценивания. В критериях отрази условия, при которых студент получит или не получит зачёт. Критерии должны содержать чёткие и однозначные формулировки, понятные студенту и тренеру курса.`
+Для получения зачёта:
+1. Все виды тестирования реализованы.
+2. Приведены материалы, подробно иллюстрирующие выполненные настройки.
