--- a/02/02.md
+++ b/02/02.md
@@ -18,6 +18,9 @@
 2. [Настраиваем пул соединений к PostgreSQL с PgBouncer](https://eax.me/pgbouncer/)
 3. [PostgreSQL Connection Pooling with PgBoun](https://pgdash.io/blog/pgbouncer-connection-pool.html)
 4. [Настройка удаленного подключения к PostgreSQL](https://1cloud.ru/help/windows/ws2019_psql_remote_coonect)
+5. [pgTAP](https://pgtap.org)
+6. [Тестирование хранимых функций с помощью pgTAP](https://www.pvsm.ru/testirovanie/53354)
+7. [Тестирование приложений на примере библиотеки pg_unit](https://pgcookbook.ru/article/pg_unit.html)
 
 
 ### Задание 1
