--- a/02/02.md
+++ b/02/02.md
@@ -21,11 +21,14 @@
 5. [pgTAP](https://pgtap.org)
 6. [Тестирование хранимых функций с помощью pgTAP](https://www.pvsm.ru/testirovanie/53354)
 7. [Тестирование приложений на примере библиотеки pg_unit](https://pgcookbook.ru/article/pg_unit.html)
+8. [ТЕСТИРОВАНИЕ ПРОИЗВОДИТЕЛЬНОСТИ УПРАВЛЯЕМОЙ БАЗЫ ДАННЫХ POSTGRESQL С ПОМОЩЬЮ PGBENCH](https://www.8host.com/blog/testirovanie-proizvoditelnosti-upravlyaemoj-bazy-dannyx-postgresql-s-pomoshhyu-pgbench/)
+9. [pgbench](https://postgrespro.ru/docs/postgresql/9.6/pgbench)
+10. [Нагрузочное тестирование PostgreSQL, используя JMeter, Yandex.Tank и Overload](https://habr.com/ru/articles/339014/)
 
 
 ### Задание 1
 
-1. Проведите нагрузочное тестирование БД в установленным pgbouncer и без него.
+1. Проведите нагрузочное тестирование БД c установленным pgbouncer и без него.
 2. Сравните результаты.
 
 *В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
