--- a/02/02.md
+++ b/02/02.md
@@ -2,19 +2,19 @@
 
 ### Цель задания
 
-В результате выполнения этого задания вы научитесь использовать утилиты нагрузочного тестирования и напишите свои unit-тесты
+В результате выполнения этого задания вы научитесь использовать утилиты нагрузочного тестирования и напишите свои unit-тесты.
 
 ------
 
 ### Инструкция к заданию
 
 1. Установите PosgreSQL.
-2. Установите pgbouncer.
+2. Установите PgBouncer.
 ------
 
 ### Инструменты/ дополнительные материалы, которые пригодятся для выполнения задания
 
-1. [Как настроить pgbouncer](https://auganrymkhan.com/tutorial/kak-nastroit-pgbouncer)
+1. [Как настроить PgBouncer](https://auganrymkhan.com/tutorial/kak-nastroit-pgbouncer)
 2. [Настраиваем пул соединений к PostgreSQL с PgBouncer](https://eax.me/pgbouncer/)
 3. [PostgreSQL Connection Pooling with PgBoun](https://pgdash.io/blog/pgbouncer-connection-pool.html)
 4. [Настройка удаленного подключения к PostgreSQL](https://1cloud.ru/help/windows/ws2019_psql_remote_coonect)
@@ -28,7 +28,7 @@
 
 ### Задание 1
 
-1. Проведите нагрузочное тестирование БД c установленным pgbouncer и без него.
+1. Проведите нагрузочное тестирование БД c установленным PgBouncer и без него.
 2. Сравните результаты.
 
 *В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
@@ -38,8 +38,8 @@
 ### Задание 2
 
 1. Напишите хранимую процедуру, реализуюущую расчет средней цены товара. 
-2. Формула расчета: ((<количество_товара_по_акции> \* <цена_товара_по_акции>) + (<количество_товара_без_акции> \* <цена_товара_без_акции>)) \\ (<количество_товара_по_акции> + <количество_товара_без_акции>)
-3. Напишите минимум четыре unit-теста для данной процедуры 
+2. Формула расчета: ((<количество_товара_по_акции> \* <цена_товара_по_акции>) + (<количество_товара_без_акции> \* <цена_товара_без_акции>)) \\ (<количество_товара_по_акции> + <количество_товара_без_акции>).
+3. Напишите минимум четыре unit-теста для данной процедуры.
 
 *В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
 
