--- a/01/01.md
+++ b/01/01.md
@@ -2,13 +2,13 @@
 
 ### Цель задания
 
-В результате выполнения этого задания вы приобретёте практику в тестировании API.
+В результате выполнения этого задания вы попрактикуетесь тестировать API.
 
 ------
 
-### Чеклист готовности к домашнему заданию
+### Чек-лист готовности к домашнему заданию
 
-1. Установить Postman или зарегистрироваться через web-интерфейс.   
+1. Установить Postman или зарегистрироваться через веб-интерфейс.   
 По желанию можно использовать curl или любой язык программирования.
 
 
@@ -16,10 +16,10 @@
 
 ### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания
 
-1. [Стратегия тестирования REST API](https://habr.com/ru/articles/568360/)
-2. [Руководство по тестированию автоматизации REST API](https://www.loadview-testing.com/ru/blog/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8E-%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%B0%D1%82/)
-3. [Большой гайд по тестированию с Postman для начинающих](https://testengineer.ru/gajd-po-testirovaniyu-v-postman/)
-4. [Основы Postman для самых маленьких](https://habr.com/ru/companies/maxilect/articles/596789/)
+1. [Стратегия тестирования REST API](https://habr.com/ru/articles/568360/).
+2. [Руководство по тестированию автоматизации REST API](https://www.loadview-testing.com/ru/blog/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8E-%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%B0%D1%82/).
+3. [Большой гайд по тестированию с Postman для начинающих](https://testengineer.ru/gajd-po-testirovaniyu-v-postman/).
+4. [Основы Postman для самых маленьких](https://habr.com/ru/companies/maxilect/articles/596789/).
 
 
 
@@ -28,22 +28,22 @@
 1. Перейдите [по ссылке](https://jsonplaceholder.typicode.com/).
 2. Изучите [предлагаемый API](https://jsonplaceholder.typicode.com/guide/).
 3. Выполните тестирование методов:
-- Getting a resource   
+- Getting a resource, 
 - Deleting a resource
 
 для двух ресурсов:   
 /comments   
 /albums   
 
-*В качестве решения приложите снимки экрана, подвтерждающие выполнение тестов*
+*В качестве решения приложите снимки экрана, подтверждающие выполнение тестов.*
 
-### Правила приема работы
+### Правила приёма работы
 
-В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием.  
-В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
+В личном кабинете отправлена ссылка на Google Doc с выполненным заданием.  
+В документе настроены права доступа «Просматривать могут все в интернете, у кого есть ссылка».
 
 ### Критерии оценки
 
 Для получения зачёта:
-1. Создано минимум два тест кейса для каждого метода.
-2. Предоставлены снимки экрана, подтверждающие выполнение тестов.
+* создано минимум два тест кейса для каждого метода;
+* предоставлены снимки экрана, подтверждающие выполнение тестов.
