--- a/02/02.md
+++ b/02/02.md
@@ -1,57 +1,1 @@
-# Домашнее задание к занятию "Тестирование данных. Требования и подход"
-
-### Цель задания
-
-В результате выполнения этого задания вы научитесь использовать утилиты нагрузочного тестирования и напишите свои unit-тесты.
-
-------
-
-### Инструкция к заданию
-
-1. Установите PosgreSQL.
-2. Установите PgBouncer.
-------
-
-### Инструменты/ дополнительные материалы, которые пригодятся для выполнения задания
-
-1. [Как настроить PgBouncer](https://auganrymkhan.com/tutorial/kak-nastroit-pgbouncer)
-2. [Настраиваем пул соединений к PostgreSQL с PgBouncer](https://eax.me/pgbouncer/)
-3. [PostgreSQL Connection Pooling with PgBoun](https://pgdash.io/blog/pgbouncer-connection-pool.html)
-4. [Настройка удаленного подключения к PostgreSQL](https://1cloud.ru/help/windows/ws2019_psql_remote_coonect)
-5. [pgTAP](https://pgtap.org)
-6. [Тестирование хранимых функций с помощью pgTAP](https://www.pvsm.ru/testirovanie/53354)
-7. [Тестирование приложений на примере библиотеки pg_unit](https://pgcookbook.ru/article/pg_unit.html)
-8. [ТЕСТИРОВАНИЕ ПРОИЗВОДИТЕЛЬНОСТИ УПРАВЛЯЕМОЙ БАЗЫ ДАННЫХ POSTGRESQL С ПОМОЩЬЮ PGBENCH](https://www.8host.com/blog/testirovanie-proizvoditelnosti-upravlyaemoj-bazy-dannyx-postgresql-s-pomoshhyu-pgbench/)
-9. [pgbench](https://postgrespro.ru/docs/postgresql/9.6/pgbench)
-10. [Нагрузочное тестирование PostgreSQL, используя JMeter, Yandex.Tank и Overload](https://habr.com/ru/articles/339014/)
-
-
-### Задание 1
-
-1. Проведите нагрузочное тестирование БД c установленным PgBouncer и без него.
-2. Сравните результаты.
-
-*В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
-
-------
-
-### Задание 2
-
-1. Напишите хранимую процедуру, реализуюущую расчет средней цены товара. 
-2. Формула расчета: ((<количество_товара_по_акции> \* <цена_товара_по_акции>) + (<количество_товара_без_акции> \* <цена_товара_без_акции>)) \\ (<количество_товара_по_акции> + <количество_товара_без_акции>).
-3. Напишите минимум четыре unit-теста для данной процедуры.
-
-*В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*
-
-------
-
-### Правила приёма работы
-
-В личном кабинете отправлена ссылка на Google Документ с выполненным заданием.  
-В документе настроены права доступа «Просматривать могут все в интернете, у кого есть ссылка».
-
-### Критерии оценки
-
-Для получения зачёта:
-1. Все виды тестирования реализованы.
-2. Приведены материалы, подробно иллюстрирующие выполненные настройки.
+# Домашнее задание к занятию «Тестирование данных. Требования и подход»### Цель заданияВыполнив это задание, вы научитесь использовать утилиты нагрузочного тестирования и напишите свои unit-тесты.------### Инструкция к заданию1. Установите PosgreSQL.2. Установите PgBouncer.------### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания1. [Как настроить PgBouncer](https://auganrymkhan.com/tutorial/kak-nastroit-pgbouncer).2. [Настраиваем пул соединений к PostgreSQL с PgBouncer](https://eax.me/pgbouncer/).3. [PostgreSQL Connection Pooling with PgBouncer](https://pgdash.io/blog/pgbouncer-connection-pool.html).4. [Настройка удалённого подключения к PostgreSQL](https://1cloud.ru/help/windows/ws2019_psql_remote_coonect).5. [pgTAP](https://pgtap.org).6. [Тестирование хранимых функций с помощью pgTAP](https://www.pvsm.ru/testirovanie/53354).7. [Тестирование приложений на примере библиотеки pg_unit](https://pgcookbook.ru/article/pg_unit.html).8. [Тестирование производительности управляемой базы данных PostgresSQL с помощью PgBench](https://www.8host.com/blog/testirovanie-proizvoditelnosti-upravlyaemoj-bazy-dannyx-postgresql-s-pomoshhyu-pgbench/).9. [PgBench](https://postgrespro.ru/docs/postgresql/9.6/pgbench).10. [Нагрузочное тестирование PostgreSQL, используя JMeter, Yandex.Tank и Overload](https://habr.com/ru/articles/339014/).### Задание 11. Проведите нагрузочное тестирование БД c установленным PgBouncer и без него.2. Сравните результаты.*В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*------### Задание 21. Напишите хранимую процедуру, реализуюущую расчёт средней цены товара. 2. Формула расчёта: ((<количество_товара_по_акции> \* <цена_товара_по_акции>) + (<количество_товара_без_акции> \* <цена_товара_без_акции>)) \\ (<количество_товара_по_акции> + <количество_товара_без_акции>).3. Напишите минимум четыре unit-теста для этой процедуры.*В качестве ответа приложите снимки экрана результатов тестирования и выводы о результатах тестирования в свободной форме.*------### Правила приёма работы- В личном кабинете отправлена ссылка на Google Документ с выполненным заданием.  - В документе настроены права доступа «Просматривать могут все в интернете, у кого есть ссылка».### Критерии оценкиДля получения зачёта:1. Все виды тестирования реализованы.2. Приведены материалы, подробно иллюстрирующие выполненные настройки.
